@@ -13,6 +13,10 @@
     Notes: you need to setup the environment by running vcvars32.bat 
     (e.g. MSVC 2008 command prompt in start menu) before running scons.
     
+  - Added support for amalgated source and header generation (a la sqlite).
+    Refer to README.txt section "Generating amalgated source and header"
+    for detail.
+    
 * Value
 
   - Removed experimental ValueAllocator, it caused static 
